3rd draft redesign of candidate page

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -92,7 +92,6 @@
           </dialog>
     
 <div class="container">
-    <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
        <h2>ROBERT A. AUSTINO</h2>
         <div class="running-for">
@@ -113,12 +112,20 @@
                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Cumberland County Democrats Site</button></a>
                 <a href="https://www.facebook.com/robert.austino/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
             </div>
-            <h4 class="sub-heading">What does a commissioner do?</h4>
-            <div class="job-description can-sec">
-                Bacon ipsum dolor amet brisket pork loin biltong, boudin jerky pastrami hamburger sausage. Shoulder shankle 
-                cupim chicken, pastrami ham hock beef ribs. Brisket beef ribs sausage ham hock flank beef andouille short ribs 
-                frankfurter kielbasa chislic. Landjaeger pork chop shank, drumstick strip steak tri-tip leberkas pancetta 
-                capicola sirloin ground round. Pork belly pork venison beef ribs.
+            <button class="quick-summary-reopen">quick summary</button>
+            <div class="election-date">
+                <p>This election is on November 7th, 2024</p>
+            </div>
+            <div class="animal-box">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
             </div>
         </div>
     </div>
