--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -106,9 +106,14 @@
 
     <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
-
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
     <div id="sample-ballot">
+        <h4 class="sub-heading-ballot">What does a commissioner do?</h4>
+        <div class="job-description can-sec">
+            Bacon ipsum dolor amet brisket pork loin biltong, boudin jerky pastrami hamburger sausage. Shoulder shankle 
+            cupim chicken, pastrami ham hock beef ribs. Brisket beef ribs sausage ham hock flank beef andouille short ribs 
+            frankfurter kielbasa chislic. Landjaeger pork chop shank, drumstick strip steak tri-tip leberkas pancetta 
+            capicola sirloin ground round. Pork belly pork venison beef ribs.
+        </div>
         <button class="quick-summary-reopen">quick summary</button>
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
