tests on austino and bashaw pages

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -108,9 +108,13 @@
         <div class="candidate-pic-box-content">
             <h4 class="sub-heading">Website</h4>
             <div class="website">
-                <a href="https://www.facebook.com/profile.php?id=61558533437326" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook Campaign Site</button></a>
+                <a href="https://www.facebook.com/profile.php?id=61558533437326" target="_blank"><i class="fab fa-facebook-f"></i>Campaign Facebook</a>
+                <!-- <a href="" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook Campaign Site</button></a> -->
+                
                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Cumberland County Democrats Site</button></a>
-                <a href="https://www.facebook.com/robert.austino/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a>
+                
+                <!-- <a href="https://www.facebook.com/robert.austino/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a> -->
+                <a href="https://www.facebook.com/robert.austino/" target="_blank"><i class="fab fa-facebook-f"></i>Personal Facebook</a>
             </div>
             <button class="quick-summary-reopen">quick summary</button>
             <div class="election-date">
