--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -104,15 +104,14 @@
      <div class="candidate-pic-box">
          <img class="cover" src="../../../assets/candidates/Curtis-Bashaw.jpg" class="candidate-pic">
          <div class="candidate-pic-box-content">
-             <h4 class="sub-heading">Website</h4>
-             <div class="website">
-                 <a href="https://www.facebook.com/BashawforSenate" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook Campaign Site</button></a>
-                 <a href="https://www.facebook.com/BashawforSenate" target="_blank" style="color: green;"><i class="fab fa-facebook-f"></i></a>
+             <h4 class="sub-heading">Websites</h4>
+             <div class="website">                 
+                 <a href="https://www.facebook.com/BashawforSenate" target="_blank" style="color: blue;"><i class="fab fa-facebook-f"></i></a>
                  <!-- <a href="https://www.instagram.com/curtisbashawforsenate/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a> -->
-                 <a href="https://www.instagram.com/curtisbashawforsenate/" target="_blank"><i class="fab fa-instagram"></i></a>
+                 <a href="https://www.instagram.com/curtisbashawforsenate/" target="_blank" style="background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;"><i class="fab fa-instagram"></i></a>
                  
                  <!-- <a href="https://twitter.com/Bashawforsenate" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a> -->
-                 <a href="https://twitter.com/Bashawforsenate" target="_blank"><i class="fab fa-twitter"></i></a>
+                 <a href="https://twitter.com/Bashawforsenate" target="_blank"><i class="fab fa-x-twitter"></i></a>
                 </div>
              <button class="quick-summary-reopen">quick summary</button>
              <div class="election-date">
