icon testing 3, county commissioner description

--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -111,7 +111,7 @@
                  <a href="https://www.instagram.com/curtisbashawforsenate/" target="_blank" style="background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;"><i class="fab fa-instagram"></i></a>
                  
                  <!-- <a href="https://twitter.com/Bashawforsenate" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a> -->
-                 <a href="https://twitter.com/Bashawforsenate" target="_blank"><i class="fab fa-x-twitter"></i></a>
+                 <a href="https://twitter.com/Bashawforsenate" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                 </div>
              <button class="quick-summary-reopen">quick summary</button>
              <div class="election-date">
