further icon testing

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <script src="https://kit.fontawesome.com/d7e6c5206b.js" crossorigin="anonymous"></script>
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
@@ -109,13 +110,14 @@
         <div class="candidate-pic-box-content">
             <h4 class="sub-heading">Website</h4>
             <div class="website">
-                <a href="https://www.facebook.com/profile.php?id=61558533437326" target="_blank"><i class="fab fa-facebook-f"></i>Campaign Facebook</a>
+                <a href="https://www.facebook.com/profile.php?id=61558533437326" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <!-- <a href="https://www.facebook.com/profile.php?id=61558533437326" target="_blank"><i class="fab fa-facebook-f"></i>Campaign Facebook</a> -->
                 <!-- <a href="" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook Campaign Site</button></a> -->
                 
                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Cumberland County Democrats Site</button></a>
                 
                 <!-- <a href="https://www.facebook.com/robert.austino/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook</button></a> -->
-                <a href="https://www.facebook.com/robert.austino/" target="_blank"><i class="fab fa-facebook-f"></i>Personal Facebook</a>
+                <a href="https://www.facebook.com/robert.austino/" target="_blank"><i class="fa-brands fa-square-facebook"></i>Personal Facebook</a>
             </div>
             <button class="quick-summary-reopen">quick summary</button>
             <div class="election-date">
