--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -8,6 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <script src="https://kit.fontawesome.com/d7e6c5206b.js" crossorigin="anonymous"></script>
         <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
@@ -106,9 +107,9 @@
          <div class="candidate-pic-box-content">
              <h4 class="sub-heading">Websites</h4>
              <div class="website">                 
-                 <a href="https://www.facebook.com/BashawforSenate" target="_blank" style="color: blue;"><i class="fab fa-facebook-f"></i></a>
+                 <a href="https://www.facebook.com/BashawforSenate" target="_blank" style="color: blue;"><i class="fa-brands fa-facebook"></i></a>
                  <!-- <a href="https://www.instagram.com/curtisbashawforsenate/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Instagram</button></a> -->
-                 <a href="https://www.instagram.com/curtisbashawforsenate/" target="_blank" style="background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;"><i class="fab fa-instagram"></i></a>
+                 <a href="https://www.instagram.com/curtisbashawforsenate/" target="_blank" style="background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); -webkit-background-clip: text; background-clip: text; -webkit-text-fill-color: transparent;"><i class="fa-brands fa-instagram"></i></a>
                  
                  <!-- <a href="https://twitter.com/Bashawforsenate" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Twitter/X</button></a> -->
                  <a href="https://twitter.com/Bashawforsenate" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
