--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -109,51 +109,58 @@
     <div id="sample-ballot">
         <h4 class="sub-heading-ballot">What does a commissioner do?</h4>
         <div class="job-description can-sec">
-            A county commissioner is an elected official responsible for overseeing the administration of county government. The role can vary slightly depending on the specific laws 
-            and regulations of the state, but generally, county commissioners have the following responsibilities:
+
+            A county commissioner is an elected official responsible for overseeing the administration of county government, like an extension of the state government that oversees the 
+            specific county. The role can vary slightly depending on the specific laws and regulations of the state, but generally, county commissioners have the following responsibilities:
             <br>
             <br>
-            Budgeting and Finance: County commissioners are responsible for creating and approving the county's budget. They allocate funds to various departments and services, such as 
-            law enforcement, public health, infrastructure, and education.
-            <br>
-            <br>
-            Policy Making: They set policies for the county, including zoning laws, land use planning, and local ordinances. Commissioners may also pass resolutions that impact 
-            county operations and the well-being of residents.
-            <br>
-            <br>
-            Infrastructure and Public Works: Commissioners oversee the maintenance and development of county infrastructure, such as roads, bridges, parks, and public buildings. 
-            They may also be involved in decisions regarding public transportation and utilities.
-            <br>
-            <br>
-            Public Safety and Health: They ensure that services like law enforcement, fire protection, emergency medical services, and public health departments are adequately funded 
-            and managed.
-            <br>
-            <br>
-            Taxation: County commissioners have the authority to levy taxes and determine the tax rate for the county. They ensure that sufficient revenue is generated to fund county 
-            services.
-            <br>
-            <br>
-            Community Services: They oversee various community services, including social services, libraries, and recreation programs.
-            <br>
-            <br>
-            Economic Development: Commissioners often work on initiatives to promote economic growth in the county, including attracting businesses, supporting local agriculture, and 
-            fostering job creation.
-            <br>
-            <br>
-            Representation: County commissioners serve as representatives of the residents in their district or the county at large, depending on how the commission is structured. 
-            They listen to constituents' concerns and advocate for their needs at the county level.
-            <br>
-            <br>
-            Environmental and Land Use Issues: Commissioners may be involved in decisions related to environmental protection, land conservation, and the regulation of natural resources.
-            <br>
-            <br>
-            Collaboration with Other Governments: County commissioners often work with state and local governments, as well as regional authorities, to coordinate services and address 
-            issues that cross jurisdictional boundaries.
-            <br>
-            <br>
-            Overall, county commissioners play a crucial role in shaping the policies and services that affect the daily lives of county residents.
+
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+                Budgeting and Finance: County commissioners are responsible for creating and approving the county's budget. They allocate funds to various departments and services, such as 
+                law enforcement, public health, infrastructure, and education.
+                <br>
+                <br>
+                Policy Making: They set policies for the county, including zoning laws, land use planning, and local ordinances. Commissioners may also pass resolutions that impact 
+                county operations and the well-being of residents.
+                <br>
+                <br>
+                Infrastructure and Public Works: Commissioners oversee the maintenance and development of county infrastructure, such as roads, bridges, parks, and public buildings. 
+                They may also be involved in decisions regarding public transportation and utilities.
+                <br>
+                <br>
+                Public Safety and Health: They ensure that services like law enforcement, fire protection, emergency medical services, and public health departments are adequately funded 
+                and managed.
+                <br>
+                <br>
+                Taxation: County commissioners have the authority to levy taxes and determine the tax rate for the county. They ensure that sufficient revenue is generated to fund county 
+                services.
+                <br>
+                <br>
+                Community Services: They oversee various community services, including social services, libraries, and recreation programs.
+                <br>
+                <br>
+                Economic Development: Commissioners often work on initiatives to promote economic growth in the county, including attracting businesses, supporting local agriculture, and 
+                fostering job creation.
+                <br>
+                <br>
+                Representation: County commissioners serve as representatives of the residents in their district or the county at large, depending on how the commission is structured. 
+                They listen to constituents' concerns and advocate for their needs at the county level.
+                <br>
+                <br>
+                Environmental and Land Use Issues: Commissioners may be involved in decisions related to environmental protection, land conservation, and the regulation of natural resources.
+                <br>
+                <br>
+                Collaboration with Other Governments: County commissioners often work with state and local governments, as well as regional authorities, to coordinate services and address 
+                issues that cross jurisdictional boundaries.
+                <br>
+                <br>
+                Overall, county commissioners play a crucial role in shaping the policies and services that affect the daily lives of county residents.
+            </details>
         </div>
+
         <button class="quick-summary-reopen">quick summary</button>
+        
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
