rename summary buttons test

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -119,7 +119,7 @@
                 <a href="https://www.facebook.com/robert.austino/" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Personal Facebook</button></a>
                 <!-- <a href="https://www.facebook.com/robert.austino/" target="_blank"><i class="fa-brands fa-square-facebook" style="color: blue"></i></a> -->
             </div>
-            <button class="quick-summary-reopen">quick summary</button>
+            <button class="quick-summary-reopen">quick candidate summary</button>
             <div class="election-date">
                 <p>This election is on November 5th, 2024</p>
             </div>
