--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -159,8 +159,8 @@
             </details>
         </div>
 
-        <button class="quick-summary-reopen">quick summary</button>
-        
+        <button class="quick-summary-reopen">quick election summary</button>
+
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
             <h2>SAMPLE BALLOT</h2>
