slight update quick summary of commissioners election

--- a/child_pages/cc-elections/Candidates/white-morris.html
+++ b/child_pages/cc-elections/Candidates/white-morris.html
@@ -63,13 +63,13 @@
             </div>
         </div>
     
-        <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+        <!-- <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 <div class="container">
     <div class="title-info">
        <h2>DAMITA WHITE-MORRIS</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
-            <div class="position">General Assembly - NJ 1st Legislative District</div>
+            <div class="position">Bridgeton School Board</div>
         </div>
         <div class="incum-or-challenger">
             <div class="incumbent inactive">Incumbent</div>
