--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -77,24 +77,25 @@
           <h6 class="page-title">County Commissioner</h6>
           <p>This year 2 seats are open on the County Commissioner board. The republicans are running two incumbents, <a href="https://www.ccrrogop.org/county-commissioner">Director Commissioner Sileo and Commissioner Romero</a>. 
             The democrats are running two challengers, <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/">former Commissioner Capizola and former Sheriff Austino</a>. 
-            Both parties appear to be running 'slate', which means they are running as a team within their parties, potentially all the way up to the national level. All candidates have been 
-            reached out to in terms of clarifying their individual characteristics, agendas, policy positions, and comparisons to other candidates. None have responded to that detailed request
-            for information, but some have provided brief information online, at political meetings with general messaging, and some face to face interactions. 
+            Both parties appear to be running 'slate', which means they are running as a team within their parties, potentially all the way up to the national level (in fact, the 
+            democrat candidates have officially endorsed the Harris-Walz ticket on their facebook). All candidates have been reached out to in terms of clarifying their individual 
+            characteristics, agendas, policy positions, and comparisons to other candidates. While some candidates have posted some information and spoken to us at various events, only 
+            former Sheriff Austino has directly responded to those detailed requests with a brief explanation regarding the current board potentially spending too much money on 
+            County Park projects, to which current Commissioner Romero responded that the projects are within budget and there is no need for concern.
             <br>
             <br>
             The two republican incumbents for County Commissioner inherently have experience, generally promote conservative values and policy, and have addressed local issues from a 
             conservative perspective, such as voting no for the Middle Mile Broadband project for fiscally conservative reasons and bringing up concerns on how national immigration policy is 
-            affecting our county (apparently MS-13 gang members have been identified here in Cumberland County - Commissioner Sileo at a recent Republican breakfast meeting). With that in mind, 
-            it is the opinion of InformTheVote that the Democrat challengers ought to present a clear differentiation in their campaign, but the only specific point that we've seen is that 
-            former Sheriff Austino disagrees with the current board of commissioners attempting to build 3 county parks while our budget is tight, which implies he would be more fiscally 
-            responsible, as he has 15 years of budget handling experience. With such little comparison regarding local issues, it remains difficult to know what the actual choices are, and it 
+            affecting our county (apparently MS-13 gang members have been identified here in Cumberland County - Commissioner Sileo stated at a recent Republican breakfast meeting). 
+            that in mind, it is the opinion of InformTheVote that the Democrat challengers ought to present more information on why a change in leadership might be beneficial.
+            With such little information regarding how local candidates might handle local issues, it remains difficult to know what the actual choices are, and it 
             could be fair to say that the incumbents are doing a good job... if it ain't broke, don't fix it. On the other hand, since no differentiations have been made regarding the candidates
             from their parties, with some candidates openly <a href="https://www.facebook.com/teamrileyaustinocapizola/posts/pfbid02TfP87cUqFVnRcghD2B2azdWREc7QMw6twNeWtgZYQ1obVZwmXvrB2McQgDrfFEHxl?rdid=kpuRhdj1uAT0qrfm">endorsing their national ticket</a>
             , if you more generally agree with Democrat or Republican party platforms, voting party-line is also understandable. Be sure to check out the  
             <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a> and 
             <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda) to see the general direction of Republicans. Also be sure to check out the
-            <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a> to see the general direction of Democrats while we wait for the Harris-Walz ticket 
-            to post their specific platform (still not posted as of 8/9/2024 <a href="https://kamalaharris.com/">Campaign Site</a>).
+            <a href="https://democrats.org/where-we-stand/party-platform/">*2020* Party Platform</a> to see the general direction of Democrats while we wait for the Harris-Walz ticket 
+            to post their specific platform (still not posted as of 8/26/2024 <a href="https://kamalaharris.com/">Campaign Site</a>).
 
             Hopefully more information will come out and some type of 
             town-hall or candidates forum will happen in the coming months to help inform our choices.
