--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -108,7 +108,7 @@
     <div class="candidate-pic-box">
         <img class="cover" src="../../../assets/candidates/austino.jpg" class="candidate-pic">
         <div class="candidate-pic-box-content">
-            <h4 class="sub-heading">Website</h4>
+            <h4 class="sub-heading">Websites</h4>
             <div class="website">
                 <!-- <a href="https://www.facebook.com/profile.php?id=61558533437326" target="_blank"><i class="fa-brands fa-facebook" style="color: blue"></i></a> -->
                 <!-- <a href="https://www.facebook.com/profile.php?id=61558533437326" target="_blank"><i class="fab fa-facebook-f"></i>Campaign Facebook</a> -->
