rearranged romeros page

--- a/child_pages/cc-elections/Candidates/sileo.html
+++ b/child_pages/cc-elections/Candidates/sileo.html
@@ -77,7 +77,7 @@
                 commissioner, he has more experience than his democrat challengers. Like his ticket-mate Commissioner Romero, Sileo has a long career in business, specifically within the steel 
                 industry. He has pointed out at a recent Republican breakfast that his business experience is important because many decisions of the Commissioner board are more 
                 business-related decisions as opposed to political decisions. He has also been involved in several community leadership positions throughout the years. This was also 
-                highlighted at the breakfast meeting as he pointed out that being Director Commissioner he is now the leader and spokesperson of the board. Like most candidates at the local
+                highlighted at the breakfast meeting as he pointed out that being Director Commissioner, he is now the leader and spokesperson of the board. Like most candidates at the local
                 level, Sileo seems to be running slate (as part of the overall republican team) and there is little forward facing information about how 
                 he is directly different from his democrat challengers. He has been reached out to via his government email to clarify his individual stances and how he differentiates 
                 himself from his opponents, with no response. However, he also did point out at the breakfast meeting that with the current 7-0 Republican board, productivity has been much more 
@@ -122,15 +122,15 @@
                  <p>This election is on November 5th, 2024</p>
              </div>
              <div class="animal-box">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
-                 <img src="../../../assets/candidates/donkey.png" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
+                 <img src="../../../assets/candidates/elephant.tif" alt="democrt donkey mascot" class="donkey">
              </div>
          </div>
      </div>
