updated county clerk ballot page

--- a/child_pages/cc-elections/cc_county_clerk_2024.html
+++ b/child_pages/cc-elections/cc_county_clerk_2024.html
@@ -78,16 +78,16 @@
             is running for re-election against Republican challenger, <a href="https://www.ccrrogop.org/cumberlandcountyclerk2024">Commissioner Lods</a>.
             Both parties appear to be running 'slate', which means they are running as a team within their parties, potentially all the way up to the national level. All candidates have been
             reached out to in terms of clarifying their individual characteristics, agendas, and comparisons to other candidates. None have responded to that specific detailed request. 
-            So, if you vote party line, as of now, that's fair. If you're more of an independent who votes for individuals as opposed to parties, their is no significant information as of yet.
+            So, if you vote party line, as of now, that's fair. If you're more of an independent who votes for individuals as opposed to parties, there is only a limited amount of info as of yet.
             Be sure to check out the  
             <a href="https://prod-cdn-static.gop.com/media/documents/DRAFT_12_FINAL%5B1%5D-ben_1468872234.pdf">Republican Party Platform</a> and 
             <a href="https://www.donaldjtrump.com/platform">Agenda 47</a> (Donald Trump's agenda) to see the general direction of Republicans. Also be sure to check out the
-            <a href="https://democrats.org/where-we-stand/party-platform/">Democrat Party Platform</a> to see the general direction of Democrats while we wait for the Harris-Walz ticket 
-            to post their specific platform (still not posted as of 8/9/2024 <a href="https://kamalaharris.com/">Campaign Site</a>). 
+            <a href="https://democrats.org/where-we-stand/party-platform/">*2020* Democrat Party Platform</a> to see the general direction of Democrats while we wait for the Harris-Walz ticket 
+            to post their specific platform (still not posted as of 8/27/2024 <a href="https://kamalaharris.com/">Campaign Site</a>). 
             <br>
             <br>
-            Celeste Riley, the incumbent, inherently has experience specifically for this position, so it is the opinion of Inform the Vote that there ought to be some kind of discussion as 
-            to why the Republican challenger would be significantly better or different than the incumbent, especially in terms of the specific local role they will hold. There has been some 
+            Celeste Riley, the incumbent, inherently has experience specifically for this position, so it is the opinion of Inform the Vote that there ought to be a comprehensive discussion as 
+            to why the Republican challenger would be significantly better or different than the incumbent, especially in terms of the specific local role they would hold. There has been some 
             mention of this at Republican breakfast meetings, which brought up the issues that many citizens aren't aware of what the County Clerk does (which is concerning since the position is 
             oftentimes referred to as a liaison between the citizens and the government), the execution (or lack thereof) of the incumbent, and the amount of time the incumbent spends doing the 
             job. Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -96,7 +96,62 @@
       
       </dialog>
 
-      <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+      <h4 class="sub-heading-ballot">What does a County Clerk do?</h4>
+        <div class="job-description can-sec">
+
+            County clerks are elected or appointed officials responsible for maintaining public records and administering various government functions at the county level. Their duties 
+            can vary depending on the state and specific county, but generally, county clerks are responsible for the following:
+            <br>
+            <br>
+
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+                Record Keeping: The county clerk is the official keeper of public records, including birth and death certificates, marriage licenses, property deeds, and other vital 
+                records. They ensure these documents are accurately recorded, stored, and accessible to the public.
+                <br>
+                <br>
+                Elections Administration: County clerks often oversee the administration of local, state, and federal elections within their jurisdiction. This includes managing voter 
+                registration, preparing ballots, training poll workers, overseeing polling places, and ensuring that election laws are followed. They also handle the certification of 
+                election results.
+                <br>
+                <br>
+                Issuing Licenses and Permits: The county clerk's office is typically responsible for issuing various licenses and permits, such as marriage licenses, business licenses, 
+                and permits for hunting, fishing, and other activities.
+                <br>
+                <br>
+                Public Notices and Legal Filings: County clerks handle the publication of public notices and the filing of legal documents, such as court orders, liens, and other 
+                official records. They also manage the county's official seal and may be responsible for notarizing documents.
+                <br>
+                <br>
+                Board and Commission Support: The county clerk often serves as the clerk to the county board of commissioners or other governing bodies, preparing agendas, recording 
+                minutes, and maintaining official records of meetings.
+                <br>
+                <br>
+                Custodian of County Records: The county clerk maintains various other county records, including those related to county government operations, contracts, and legal 
+                documents. They ensure these records are preserved and accessible as required by law.
+                <br>
+                <br>
+                Administration of Oaths: County clerks are authorized to administer oaths of office to public officials and may also handle oaths for witnesses in certain legal proceedings.
+                <br>
+                <br>
+                Real Estate Transactions: The county clerk's office records real estate transactions, including deeds, mortgages, liens, and other property-related documents. They 
+                ensure that these records are accurate and up-to-date.
+                <br>
+                <br>
+                Genealogy and Historical Records: County clerks often maintain historical records that are used for genealogical research. They may provide access to these records or 
+                assist with research requests.
+                <br>
+                <br>
+                Providing Public Access: County clerks ensure that the public has access to the records they maintain. This may involve assisting individuals with document searches, 
+                providing certified copies of records, and responding to public inquiries.
+                <br>
+                <br>
+                Election Filing and Candidate Information: The county clerk’s office often handles candidate filings for local elections, including verifying eligibility, accepting 
+                nomination papers, and providing information about campaign requirements.
+            </details>
+        </div>
+
+      <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
       <div id="sample-ballot">
           <button class="quick-summary-reopen">quick summary</button>
           <div class="sb-top-box"> 
