updated lods page

--- a/child_pages/cc-elections/Candidates/romero.html
+++ b/child_pages/cc-elections/Candidates/romero.html
@@ -139,7 +139,7 @@
     <div class="candidate-agenda">
 
         <h4 class="sub-heading">individual agenda</h4>
-        <div class="agenda-thesis">
+        <div class="agenda-thesis can-sec">
             <ul>
                 <li>As a former Cuban, he is anti-communist.</li>
                 <li>Will stand up for the Constitution</li>
@@ -151,7 +151,7 @@
          </div>
 
         <h4 class="sub-heading">party messaging</h4>
-        <div class="agenda-thesis">
+        <div class="agenda-thesis can-sec">
             After reaching out to multiple members of the CCRRO, it is not totally clear how the Republican party platform applies to Cumberland County. However, could infer 
             some of the following:
             <ul>
@@ -165,7 +165,7 @@
         </div>                
 
         <h4 class="sub-heading">policy positions</h4>
-        <div class="policy-positions">
+        <div class="policy-positions can-sec">
             After reaching out to Commissioner Romero and not receiving a response, it is unclear what specific policy positions relevant to Cumberland County 
             he has moving forward. However, we can infer some of the following having paid attention a fair amount over the past year:
             <ul>
@@ -182,7 +182,7 @@
         </div>
 
         <h4 class="sub-heading">experience</h4>
-        <div class="experience">
+        <div class="experience can-sec">
             <ul>
                 <li>Owned Budget Auto Care for 25 years, which gives him experience navigating state and county regulations</li>
                 <li>Has various certifications and awards in business, politics, and the community</li>
