--- a/child_pages/cc-elections/Candidates/sileo.html
+++ b/child_pages/cc-elections/Candidates/sileo.html
@@ -140,7 +140,7 @@
     <div class="candidate-agenda">
 
         <h4 class="sub-heading">individual agenda</h4>
-        <div class="agenda-thesis">
+        <div class="agenda-thesis can-sec">
             <ul>
                 <li>"Will passionately fight for the economic development of Cumberland County"
                      <a href="https://www.cumberlandcountynj.gov/joseph-sileo" target="_blank" rel="noopener noreferrer" class="website-link">Last sentence of 3rd paragraph</a>
@@ -156,7 +156,7 @@
         </div>
 
         <h4 class="sub-heading">party messaging</h4>
-        <div class="agenda-thesis">
+        <div class="agenda-thesis can-sec">
             After reaching out to multiple members of the CCRRO, it is not totally clear how the Republican party platform applies to Cumberland County. However, one could infer 
             some of the following:
             <ul>
@@ -170,7 +170,7 @@
         </div>      
             
         <h4 class="sub-heading">experience</h4>
-        <div class="experience">
+        <div class="experience can-sec">
         <ul>
             <li>County Commissioner since 2021</li>
             <li>Bayshore Sewer Project <a href="https://www.cumberlandcountynj.gov/press-releases/?FeedID=8477" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Site</a></li>
