--- a/child_pages/cc-elections/Candidates/romero.html
+++ b/child_pages/cc-elections/Candidates/romero.html
@@ -86,7 +86,7 @@
           
           </dialog>
     
-        <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+        <!-- <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
 
 <div class="container">
