--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -76,6 +76,8 @@
           <h4 class="quick-sum">quick summary button</h4>
           <h6 class="page-title">Millville City Commissioners</h6>
           <p>
+            As of today, 8/27/2024, we are still awaiting information from the Millville City Clerk about the particulars of this election. As of right now, we only know that 
+            Maria Darminio and Carole Cossaboon are running, with some limited information available on facebook. We are waiting for follow ups from them as well.
           </p>
         </div>
       
@@ -84,11 +86,42 @@
     <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
 
-    <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
+    <!-- <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn"> -->
 
     <div id="sample-ballot">
 
-        <button class="quick-summary-reopen">quick summary</button>
+        <h4 class="sub-heading-ballot">What does a commissioner do?</h4>
+        <div class="job-description can-sec">
+
+            City Commissioners in Millville, NJ, have a variety of responsibilities tied to the city's governance. One of the commissioners doubles as mayor.
+            Here's a breakdown of their roles:
+            <br>
+            <br>
+
+            <details>
+                <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
+                Legislative and Executive Functions: The City Commissioners collectively serve as both the legislative and executive branches of Millville’s government. They are 
+                responsible for making and passing ordinances, approving the city budget, and setting policies that guide the city’s operations.
+                <br>
+                <br>
+                Departmental Oversight: Each commissioner is assigned to oversee a specific department, such as finance, public safety, public works, or parks and recreation. They 
+                ensure their respective departments operate efficiently and effectively, addressing issues as they arise.
+                <br>
+                <br>
+                Collaboration and Citywide Decision-Making: While each commissioner has specific departmental responsibilities, they work together on broader citywide matters. This 
+                includes major infrastructure projects, economic development initiatives, and ensuring the overall well-being of the community.
+                <br>
+                <br>
+                Mayor's Role: One commissioner is selected as the mayor, who leads meetings and represents the city in ceremonial roles. However, the mayor holds the same legislative 
+                power as the other commissioners.
+                <br>
+                <br>
+                Public Engagement: The Board of Commissioners meets regularly, with meetings open to the public. This provides residents an opportunity to engage with local government 
+                and voice their concerns.
+            </details>
+        </div>
+
+        <button class="quick-summary-reopen">quick election summary</button>
 
         <div class="sb-top-box"> 
             <h3>ELECTION DATE: November 7th, 2023</h3>
